--- a/theme/static/css/app.css
+++ b/theme/static/css/app.css
@@ -503,10 +503,14 @@ table th {
   text-decoration: underline;
 }
 
+.post-content .expanded-img {
+  margin-bottom: 1rem;
+}
+
 @media all and (min-width: 991px) {
-  .post-content .expaned-img {
-    margin-left: -10rem;
-    margin-right: -10rem;
+  .post-content .expanded-img {
+    margin-left: -8rem;
+    margin-right: -8rem;
   }
 }
 
