chore: add section /now

--- a/theme/static/css/app.css
+++ b/theme/static/css/app.css
@@ -325,6 +325,11 @@ strong {
   font-weight: 600;
 }
 
+.divider {
+  border-bottom: 1px solid var(--table-border);
+  margin: 2.5rem 0;
+}
+
 [target="_blank"]::after {
   position: relative;
   top: -4px;
@@ -518,7 +523,6 @@ table th {
 
 .post-item a {
   color: var(--c-primary);
-  font-weight: 500;
 }
 
 .post-item div {
@@ -618,7 +622,6 @@ table th {
   #hero {
     display: flex;
     gap: 1.5rem;
-    margin-bottom: 3rem;
   }
   #hero svg {
     flex-shrink: 0;
