--- a/theme/static/css/app.css
+++ b/theme/static/css/app.css
@@ -186,6 +186,10 @@ body {
   align-items: center;
 }
 
+.relative {
+  position: relative;
+}
+
 .font-serif {
   font-family: var(--font-serif);
 }
@@ -267,8 +271,6 @@ body {
   justify-content: space-between;
   padding: 0.5rem 1rem;
   margin-bottom: 2rem;
-  position: sticky;
-  top: 0;
   -webkit-backdrop-filter: blur(40px);
   backdrop-filter: blur(40px);
   background: var(--bg-header);
@@ -344,7 +346,7 @@ strong {
 }
 
 .border-v-l {
-  left: calc((100vw - 700px) / 2 - var(--gutter));
+  left: calc((100vw - var(--container-w)) / 2 - var(--gutter));
 }
 
 @media all and (min-width: 768px) {
@@ -835,4 +837,28 @@ table th {
 .single .post-title {
   margin-top: 2.5rem;
   margin-bottom: 3.5rem;
+}
+
+.single .sidebar {
+  --sidebar-w: 200px;
+  width: var(--sidebar-w);
+  position: fixed;
+  left: calc((100vw - var(--container-w)) / 2 - var(--sidebar-w) - 16px);
+  padding: 0 0.75rem;
+  display: none;
+}
+
+@media all and (min-width: 1024px) {
+  .single .sidebar {
+    display: block;
+  }
+}
+
+.toc a {
+  display: block;
+  font-size: 0.875rem;
+  color: var(--c-gray);
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
