chore: reduce navigation font size

--- a/theme/static/css/app.css
+++ b/theme/static/css/app.css
@@ -817,6 +817,7 @@ table th {
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
   z-index: 9999;
+  font-size: 0.875rem;
 }
 
 .navigation a {
